<resources>
    <string name="homepageIP" translatable="false">http://192.168.55.231:8080</string>

    <string name="app_name">MY택배</string>
    <string name="myParcelLogo" translatable="false">myparcellogo</string>
    <string name="searchButton" translatable="false">searchbutton</string>
    <string name="bottom_menu_category">카테고리</string>
    <string name="bottom_menu_search">검색</string>
    <string name="bottom_menu_home">홈</string>
    <string name="bottom_menu_basket">장바구니</string>
    <string name="bottom_menu_order">주문내역</string>
    <string name="bottomMenuInBasket">장바구니</string>
    <string name="bottomMenuTotalpay">합계</string>
    <string name="bottom_menu_buy">체크한 상품 모두 주문</string>
    <string name="basketAllCheck">모두 체크</string>
    <string name="shipping_place">배송지</string>
    <string name="ordered_day">주문일</string>
    <string name="delete">삭제</string>
    <string name="todayDeal">오늘의 딜</string>
    <string name="pay">가격</string>
    <string name="searchHint">검색어를 입력하세요</string>
    <string name="sameTagProduct">같은 태그 상품</string>
    <string name="sameBrandProduct">같은 브랜드 상품</string>
    <string name="putStarMessage">몇 점을 주시겠습니까?</string>
    <string name="putStarOkButton">별점 주기</string>
    <string name="orderingButton">바로 구매</string>
    <string name="putTheBasketButton">장바구니에 추가</string>
    <string name="putTheBasketButton_off">장바구니에 저장됨</string>
    <string name="cancel">취소</string>
    <string name="orderCancel">주문 취소</string>
    <string name="orderButton">주문</string>
    <string name="PleaseAddressInput">배송지를 입력해 주십시오.</string>
    <string name="OrderingComplete">주문이 완료되었습니다!</string>
    <string name="basketCheckedProductAllBuy">체크한 상품 모두 주문</string>

    <string name="Login_id_text">이메일(모바일 계정의 경우 전화)</string>
    <string name="Login_pwd_text">비밀번호</string>
    <string name="LoginButton_text">로그인</string>
    <string name="MemberAddButton_text">계정 생성</string>
    <string name="Login_pwd_again">비밀번호 다시 입력</string>
    <string name="Login_pwd_LeastChar">(최소 6자)</string>

    <string name="buyOrderManName">주문자</string>
    <string name="buy_Shipping_address">배송지</string>
    <string name="buy_TotalPay">총액</string>
    <string name="buy_num">수량</string>

    <string name="logout">로그아웃</string>

    <string-array name="productKind">
        <item>모든 부분</item>
        <item>완구 및 게임</item>
        <item>Kindle 스토어</item>
        <item>Prime Video</item>
        <item>도서</item>
        <item>디지털 음악</item>
        <item>뷰티 및 퍼스널 케어</item>
        <item>예술 및 공예</item>
        <item>유아</item>
        <item>자동차 용품</item>
        <item>전자기기</item>
        <item>컴퓨터</item>
        <item>여성 패션</item>
        <item>남성 패션</item>
        <item>소녀 패션</item>
        <item>소년 패션</item>
        <item>가정 및 주방</item>
        <item>건강 및 가정</item>
        <item>공구 및 주택 개조</item>
        <item>딜</item>
        <item>반려동물용품</item>
        <item>비디오 게임</item>
        <item>산업용 및 과학용</item>
        <item>소프트웨어</item>
        <item>수하물</item>
        <item>스포츠 및 야외 활동</item>
        <item>영화 및 TV</item>
        <item>음악, CD 및 레코드판</item>
    </string-array>
</resources>
