<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="412dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <HorizontalScrollView
                android:layout_width="330dp"
                android:layout_height="330dp"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:background="@drawable/round_border"
                android:padding="5dp">

                <LinearLayout
                    android:id="@+id/prevealimagebig"
                    android:layout_width="320dp"
                    android:layout_height="320dp"
                    android:gravity="center"
                    android:orientation="horizontal" />
            </HorizontalScrollView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:padding="2sp"
                        android:text="갯수 : "
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/bp_editText_num"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ellipsize="none"
                        android:ems="10"
                        android:inputType="number"
                        android:maxLength="9"
                        android:padding="6sp"
                        android:scrollHorizontally="false"
                        android:singleLine="false"
                        android:text="1"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/orderingButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:onClick="onclickBuy"
                        android:text="@string/orderingButton" />

                    <Button
                        android:id="@+id/putthebasketButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/putTheBasketButton" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <RatingBar
                        android:id="@+id/star"
                        style="@style/Widget.AppCompat.RatingBar.Indicator"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:filterTouchesWhenObscured="false"
                        android:focusableInTouchMode="false"
                        android:max="5"
                        android:numStars="5"
                        android:rating="1"
                        android:scrollbarStyle="outsideInset"
                        android:stepSize="1" />

                    <Button
                        android:id="@+id/putStarButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/putStarOkButton" />
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/bp_textView_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16sp"
                android:text="상품명 : "
                android:textSize="20sp" />

            <TextView
                android:id="@+id/bp_textView_pay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16sp"
                android:text="가격 : "
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView_inf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16sp"
                android:text="상품정보"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView_tag"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16sp"
                    android:text="@string/sameTagProduct"
                    android:textSize="20sp" />

                <LinearLayout
                    android:id="@+id/layout_tag"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/round_border"
                    android:orientation="vertical">

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView_brand"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16sp"
                    android:text="@string/sameBrandProduct"
                    android:textSize="20sp" />

                <LinearLayout
                    android:id="@+id/layout_brand"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/round_border"
                    android:orientation="vertical">

                </LinearLayout>
            </LinearLayout>


        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>